jobs/testing-nodejs/builds/1/log
Started by user [8mha:AAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzeEgZu/dLi1CL9xJTczDwACG0V4sAAAAA=[0mJenkins Admin
Building in workspace /var/lib/jenkins/jobs/testing-nodejs/workspace
Cloning the remote Git repository
Cloning repository https://github.com/cesarvr/micro_service.git
 > git init /var/lib/jenkins/jobs/testing-nodejs/workspace # timeout=10
Fetching upstream changes from https://github.com/cesarvr/micro_service.git
 > git --version # timeout=10
using .gitcredentials to set credentials
 > git config --local credential.username cesarv01@gmail.com # timeout=10
 > git config --local credential.helper store --file=/tmp/git6624395424183914919.credentials # timeout=10
 > git -c core.askpass=true fetch --tags --progress https://github.com/cesarvr/micro_service.git +refs/heads/*:refs/remotes/origin/*
 > git config --local --remove-section credential # timeout=10
 > git config remote.origin.url https://github.com/cesarvr/micro_service.git # timeout=10
 > git config --add remote.origin.fetch +refs/heads/*:refs/remotes/origin/* # timeout=10
 > git config remote.origin.url https://github.com/cesarvr/micro_service.git # timeout=10
Fetching upstream changes from https://github.com/cesarvr/micro_service.git
using .gitcredentials to set credentials
 > git config --local credential.username cesarv01@gmail.com # timeout=10
 > git config --local credential.helper store --file=/tmp/git7383167929834132890.credentials # timeout=10
 > git -c core.askpass=true fetch --tags --progress https://github.com/cesarvr/micro_service.git +refs/heads/*:refs/remotes/origin/*
 > git config --local --remove-section credential # timeout=10
 > git rev-parse refs/remotes/origin/master^{commit} # timeout=10
 > git rev-parse refs/remotes/origin/origin/master^{commit} # timeout=10
Checking out Revision 714b88ed6aa5fc39ecf5e330e4a84b7ebcae6ccb (refs/remotes/origin/master)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f 714b88ed6aa5fc39ecf5e330e4a84b7ebcae6ccb
First time build. Skipping changelog.
Unpacking https://nodejs.org/dist/v6.3.1/node-v6.3.1-linux-x64.tar.gz to /var/lib/jenkins/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/node6 on Jenkins
[workspace] $ /var/lib/jenkins/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/node6/bin/node /tmp/hudson6265194919103480884.js
/tmp/hudson6265194919103480884.js:1
(function (exports, require, module, __filename, __dirname) { node --version
                                                                     ^^^^^^^
SyntaxError: Unexpected identifier
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.runMain (module.js:575:10)
    at run (bootstrap_node.js:352:7)
    at startup (bootstrap_node.js:144:9)
    at bootstrap_node.js:467:3
Build step 'Execute NodeJS script' marked build as failure
Finished: FAILURE
